# Lilac-v0

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg  setup.sh
cli-docs/: README.md
config/: api-config-example.yml  global-config.yml
lilac/: __main__.py
lilac/cloudAPImanager/: base.py  google.py
lilac/inferRule/: base.py  google.py
lilac/inferWorker/: __init__.py  azure.py  base.py  google.py
lilac/queryAgent/: __init__.py  azure.py  base.py  google.py
lilac/queryRule/: base.py
lilac/queryWorker/: __init__.py  azure.py  base.py  google.py
lilac/ruleExtractor/: __init__.py  azure.py  base.py  google.py
lilac/utils/: __init__.py  print.py  testGenerator.py
src/: __main__.py  main.py
src/cloudAPImanager/: __init__.py  azure.py  base.py  google.py
src/inferRule/: __init__.py  azure.py  base.py
src/inferWorker/: azure.py  base.py  google.py
src/lilac.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/queryAgent/: azure.py  base.py  google.py
src/queryRule/: __init__.py  azure.py  base.py  google.py
src/ruleExtractor/: azure.py  base.py  google.py
src/utils/: __init__.py  config.py  testGenerator.py
test/: README.md
test/virtual_machine_data_disk_attachment/: main.tf
