[metadata]
name = lilac
description = Automated program lifting of cloud infrastructure-as-code(IaC). In development.
url = https://github.com/jingjia-peng/Lilac-v0.git
version = 0.0.0

[options]
packages = find:
package_dir=
    =src
install_requires =
    pydot
    networkx
    tqdm
    numpy
    tabulate
    jsonpath_ng
    langchain_openai
    langchain_core
    langchain_community

[options.packages.find]
where=src
